# Zirc64-Emu

./: .gitignore  Cargo.toml
src/: instruction.rs  main.rs
