[dependencies]
name = "zirc64"
version = "0.1.0"
authors = ["F1L1Pv2", "kktsdev"]
edition = "2021"
repository = "https://github.com/F1L1Pv2/Zirc64-Emu"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"
